examples/typechecking/implicit.an
requires_string {s: String} (): Unit = ()
requires_u32 {x: U32} (): Unit = ()
requires_bool {b: Bool} (): Unit = ()

zero_matching () =
    requires_string ()

one_matching () =
    implicit hello = "hello"
    requires_string ()

multiple_matching () =
    implicit empty = ""
    implicit spaces = "  "
    implicit greeting = "hi!"
    requires_string ()

one_matching_global () =
    requires_bool ()

multiple_matching_with_global () =
    implicit zero = 0u32
    requires_u32 ()
    
implicit false_ = false
implicit one = 1u32

implicit_call () =
    implicit make_string {Bool} = ""
    requires_string ()

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (requires_string: fn {String} Unit -> Unit pure) {(s: String)} () : Unit = ()
// 
// (requires_u32: fn {U32} Unit -> Unit pure) {(x: U32)} () : Unit = ()
// 
// (requires_bool: fn {Bool} Unit -> Unit pure) {(b: Bool)} () : Unit = ()
// 
// (zero_matching: fn Unit -> Unit can _) () =
//     (requires_string: fn {String} Unit -> Unit pure) {(error)} ()
// 
// (one_matching: fn Unit -> Unit can _) () =
//     implicit (hello: String) = "hello"
//     (requires_string: fn {String} Unit -> Unit pure) {(hello: String)} ()
// 
// (multiple_matching: fn Unit -> Unit can _) () =
//     implicit (empty: String) = ""
//     implicit (spaces: String) = "  "
//     implicit (greeting: String) = "hi!"
//     (requires_string: fn {String} Unit -> Unit pure) {(error)} ()
// 
// (one_matching_global: fn Unit -> Unit can _) () =
//     (requires_bool: fn {Bool} Unit -> Unit pure) {(false_: Bool)} ()
// 
// (multiple_matching_with_global: fn Unit -> Unit can _) () =
//     implicit (zero: U32) = 0_U32
//     (requires_u32: fn {U32} Unit -> Unit pure) {(error)} ()
// 
// implicit (false_: Bool) = false
// 
// implicit (one: U32) = 1_U32
// 
// (implicit_call: fn Unit -> Unit can _) () =
//     implicit (make_string: fn {Bool} -> String can _) {(_: Bool)} = ""
//     (requires_string: fn {String} Unit -> Unit pure) {(make_string: fn {Bool} -> String can _) {(false_: Bool)}} ()

// expected stderr:
// examples/typechecking/implicit.an:6:5
// 5 | zero_matching () =
//   |     // error: No implicit found for type String required by parameter 1 of requires_string
// 6 |     requires_string ()
//   |     ^^^^^^^^^^^^^^^
// 
// examples/typechecking/implicit.an:16:5
// 15 |     implicit greeting = "hi!"
//    |     // error: Multiple matching implicits found for type String required by parameter 1 of requires_string: empty, spaces, greeting
// 16 |     requires_string ()
//    |     ^^^^^^^^^^^^^^^
// 
// examples/typechecking/implicit.an:23:5
// 22 |     implicit zero = 0u32
//    |     // error: Multiple matching implicits found for type U32 required by parameter 1 of requires_u32: zero, one
// 23 |     requires_u32 ()
//    |     ^^^^^^^^^^^^
// 24 |     
// 
// Found 3 errors and 0 warnings

